--- a/package.json
+++ b/package.json
@@ -5,17 +5,28 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "netease_api:run": "NeteaseCloudMusicApi"
   },
   "dependencies": {
     "axios": "^0.21.0",
+    "color": "^3.1.3",
     "core-js": "^3.6.5",
+    "dayjs": "^1.8.36",
+    "dexie": "^3.0.3",
     "electron": "^13.6.7",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.20",
+    "NeteaseCloudMusicApi": "^4.5.2",
+    "node-vibrant": "^3.1.6",
+    "nprogress": "^0.2.0",
+    "register-service-worker": "^1.7.1",
     "svg-sprite-loader": "^5.0.0",
     "vscode-codicons": "^0.0.14",
     "vue": "^2.6.11",
+    "vue-analytics": "^5.22.1",
+    "vue-clipboard2": "^0.3.1",
+    "vue-i18n": "^8.22.0",
     "vue-router": "^3.4.3",
     "vuex": "^3.4.0"
   },
