--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "axios": "^0.21.0",
     "color": "^3.1.3",
     "core-js": "^3.6.5",
+    "crypto-js": "^4.0.0",
     "dayjs": "^1.8.36",
     "dexie": "^3.0.3",
     "electron": "^13.6.7",
+    "howler": "^2.2.3",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.20",
     "NeteaseCloudMusicApi": "^4.5.2",
