--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "vue-clipboard2": "^0.3.1",
     "vue-i18n": "^8.22.0",
     "vue-router": "^3.4.3",
+    "vue-slider-component": "^3.2.5",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
