--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "NeteaseCloudMusicApi": "^4.5.7",
     "node-vibrant": "^3.1.6",
     "nprogress": "^0.2.0",
+    "plyr": "^3.6.2",
     "qrcode": "^1.4.4",
     "register-service-worker": "^1.7.1",
     "svg-sprite-loader": "^5.0.0",
