--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "zboqi-music",
+  "name": "HowlerMusic",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "netease_api:run": "NeteaseCloudMusicApi"
+    "netease_api:run": "NeteaseCloudMusicApi",
+    "push": "npm run build && bash deploy.sh"
   },
   "dependencies": {
     "axios": "^0.21.0",
@@ -43,6 +44,7 @@
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.15",
     "babel-eslint": "^10.1.0",
+    "compression-webpack-plugin": "^5.0.1",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "husky": "^4.3.0",
