--- a/package.json
+++ b/package.json
@@ -28,13 +28,14 @@
     "register-service-worker": "^1.7.1",
     "svg-sprite-loader": "^5.0.0",
     "vscode-codicons": "^0.0.14",
-    "vue": "^2.6.11",
+    "vue": "^2.6.14",
     "vue-analytics": "^5.22.1",
     "vue-clipboard2": "^0.3.1",
     "vue-i18n": "^8.22.0",
     "vue-router": "^3.4.3",
     "vue-slider-component": "^3.2.5",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@types/node": "^17.0.0",
