--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
     "rewrites": [{
         "source": "/api/:match*",
-        "destination": "https://netease-cloud-music-api-two-rust.vercel.app/:match*"
+        "destination": "https://api.woaitouxiang.top/:match*"
     }]
 }
